--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <div class="watch">
             <img id="watch1" src="./images/apple_images/promo_logo_watch_lte__emrof7zzkriq_large.png">
             <!--<img src="./images/apple_images/promo_watch_lte__djeaso7ukrsm_medium.jpg">-->
-            <p class="sublinecard">Es nuestra pantalla más grande hasta ahora.</p>
+            <p class="sublinecardwhite">Es nuestra pantalla más grande hasta ahora.</p>
             <a class="information-buy-links-cards" href="#" target="_blank">
                 Leer más. >
             </a>
@@ -120,7 +120,7 @@
 
         <div class="iPadair">
             <img id="ipadair1" src="./images/apple_images/promo_logo_ipadair__frwnnsqveeye_large.png">
-            <p class="sublinecard">Luz. Brillante. Lleno de poder.</p>
+            <p class="sublinecardblack">Luz. Brillante. Lleno de poder.</p>
             <a class="information-buy-links-cards" href="#" target="_blank">
                 Leer más. >
             </a>
@@ -131,7 +131,7 @@
 
         <div class="apple-card">
             <img id="card1" src="images/apple_images/logo__dcojfwkzna2q_large.png">
-            <p class="sublinecard">Obtenga hasta un 3% de reembolso<br>
+            <p class="sublinecardwhite">Obtenga hasta un 3% de reembolso<br>
                 diario en efectivo con cada compra.</p>
             <a class="information-buy-links-cards" href="#" target="_blank">
                 Leer más. >
@@ -143,7 +143,7 @@
 
         <div class="airpods-pro">
             <h1 class="headline-card">AirPods Pro</h1>
-            <h2 class="sublinecard">Magia como nunca has escuchado.</p>
+            <h2 class="sublinecardblack">Magia como nunca has escuchado.</p>
                 <a class="information-buy-links-cards" href="#" target="_blank">
                     Leer más. >
                 </a>
@@ -156,8 +156,85 @@
     </section>
 
 
-    <footer>
-        <p>Eso es el contenedor del footer</p>
+    <div class="carrusel">
+        <img src="./images/apple_images/surface.jpg" />
+        <img class="carruselimg"
+            src="./images/apple_images/amber.jpg" />
+        <img class="carruselimg"
+            src="./images/apple_images/tedlasso.jpg" />
+        <img class="carruselimg"
+            src="./images/apple_images/loot.jpg" />
+        <img class="carruselimg"
+            src="./images/apple_images/tv.jpg" />
+        <img class="carruselimg"
+            src="./images/apple_images/planet.jpg" />
+        <img class="carruselimg"
+            src="./images/apple_images/severance.jpg" />
+        <img class="carruselimg"
+            src="./images/apple_images/mankind.jpg" />
+        <img class="carruselimg"
+            src="./images/apple_images/blackbird_bg_promo__3xdwnk3r9hua_large.jpeg" />
+        <img class="carruselimg"
+            src="./images/apple_images/morning.jpg" />
+        <img class="carruselimg"
+            src="./images/apple_images/see.jpg" />
+    </div>
+
+
+
+    <footer class="footercontent">
+        <p id="footertext">1. Los compradores calificados reciben una tarjeta de regalo de Apple cuando compran una Mac o iPad elegible en una
+        ubicación calificada. Solo una tarjeta de regalo de Apple por Mac o iPad elegible por comprador calificado. Oferta
+        sujeta a disponibilidad. Mientras duren las reservas.
+        Los Compradores calificados recibirán un descuento equivalente al valor de la Tarjeta de regalo de Apple sobre el precio
+        de la Mac o iPad elegible, pero se les cobrará por todos los artículos en su carrito, incluida la Tarjeta de regalo de
+        Apple.
+        Aviso importante con respecto al recibo de pago y al estado de cuenta mensual para las compras a plazos mensuales con
+        Apple Card (ACMI) con esta promoción: los compradores calificados que seleccionen ACMI (una opción de pago con 0% APR)
+        como tipo de pago al momento de pagar recibirán un descuento equivalente al valor de la Apple Tarjeta de regalo de
+        descuento en el precio del Mac o iPad elegible.
+        Esto resultará en un plan de pago en cuotas ACMI durante 12 meses para el iPad o Mac elegible con descuento por el
+        crédito instantáneo, y un segundo plan de pago en cuotas ACMI durante 12 meses por el precio total de la Apple Gift
+        Card.
+        El monto total combinado cobrado sobre los dos planes de cuotas ACMI separados reflejará el precio de venta total
+        original del Producto Elegible. Por separado, los Compradores calificados recibirán y se les cobrará la Tarjeta de
+        regalo de Apple por el monto del descuento aplicable de la Mac o iPad elegible.
+        ACMI está sujeto a aprobación de crédito y límite de crédito. Las APR variables para Apple Card que no sean ACMI oscilan
+        entre el 12,49% y el 23,49% en función de la solvencia. Tarifas a partir del 1 de julio de 2022. Si elige la opción de
+        pago completo o pago único para una compra elegible para ACMI en lugar de elegir ACMI como la opción de pago al
+        finalizar la compra,
+        esa compra estará sujeta a la APR variable asignada a su Apple Card. Los impuestos y el envío no están incluidos en las
+        transacciones ACMI y están sujetos a su APR de compra estándar. Consulte el Acuerdo de cliente de Apple Card en
+        <a href="https://web.archive.org/web/20220804004020/https://www.goldmansachs.com/terms-and-conditions/Apple-Card-Customer-Agreement.pdf"
+            target="_blank"
+            rel="nofollow">https://www.goldmansachs.com/terms-and-conditions/Apple-Card-Customer-Agreement.pdf</a>
+        para obtener más información.
+        ACMI no está disponible para compras realizadas en línea en las siguientes tiendas especiales: Apple Employee Purchase
+        Plan; Programas de compra de empleados corporativos participantes; Apple at Work para pequeñas empresas; Programas de
+        compra gubernamentales, para veteranos y militares, o en dispositivos reacondicionados. Apple Card es emitida por
+        Goldman Sachs Bank USA,
+        Sucursal de Salt Lake City. Disponible para solicitantes que califiquen en los Estados Unidos. Si reside en los
+        territorios de EE. UU., llame a Goldman Sachs al 877-255-5923 si tiene preguntas sobre cómo acceder a esta oferta o
+        solicitar Apple Card. Esta oferta no se puede combinar con el Plan de compras para empleados de Apple ni con los precios
+        de fidelización empresarial.
+        La disponibilidad de las ofertas de promoción en la tienda puede verse limitada por el cierre de las tiendas Apple Store
+        como resultado del COVID-19. Se aplican restricciones adicionales. Vea los términos y condiciones completos de la oferta
+        aquí.</p>
+        <p id="footertext">
+            Para acceder y usar todas las funciones de Apple Card, debe agregar Apple Card a Wallet en un iPhone o iPad con la
+            última versión de iOS o iPadOS. Actualice a la última versión yendo a Configuración > General > Actualización de software.
+            Toca Descargar e instalar.
+            <br>
+            Disponible para solicitantes que califiquen en los Estados Unidos.
+            <br>
+            Apple Card es emitida por Goldman Sachs Bank USA, Salt Lake City Branch.
+            <br>
+            Obtenga más información sobre cómo se evalúan las aplicaciones de Apple Card en <a
+                href="https://web.archive.org/web/20220804004020/https://support.apple.com/kb/HT209218">support.apple.com/kb/HT209218</a>.
+            <br>
+            Las marcas registradas y los derechos de autor de Major League Baseball se utilizan con el permiso de MLB Advanced
+            Media, L.P. Todos los derechos reservados.
+        </p>
     </footer>
 
 </body>
